* Tue Mar 06 2012 Shane Bradley <sbradley@redhat.com>- 2.10-0.0
- Fix bug where fence devies were not found.
- Fix bug where it was not getting all the mount options for checking GFS mounts.
* Fri Feb 10 2012 Shane Bradley <sbradley@redhat.com>- 2.09-0.0
- Added detection for fence_vmware agent
- Fixed bug where clusternode names that were IPv4 address was not detected.
- Changed old knowledge base urls to the new urls.
* Fri Feb 10 2012 Shane Bradley <sbradley@redhat.com>- 2.08-0.0
- Added detection for various cluster configurations issues.
- Added ability to detect samba/nfs exports of gfs/gfs2 fs and will report if nfs/smb are exporting same gfs/gfs2 fs.
- Added ability to detect if noatime nodirtime are not used on gfs/gfs2 mount.
- Added ability to detect if localflocks is not enabled on gfs/gfs2 exported via nfs.
* Fri Jan 20 2012 Shane Bradley <sbradley@redhat.com>- 2.07-0.3
- Added in smb.conf and etc/exports parsers.
- Added in GFS/GFS2 nfs/smb export checks
* Tue Jan 10 2012 Shane Bradley <sbradley@redhat.com>- 2.07-0.2
- Removed the FetchURL class cause currently not used.
- Added ability to summarize network aliases/bridging in network and cluster plugins.
- Added curl output to console on downloads.
- Fix bug on extracting items not under a root directory with tar.
- Fix bug in checksysreport plugin if no installedrpms file is found.
* Thu Jan 05 2012 Shane Bradley <sbradley@redhat.com>- 2.07-0
- Fix issue with correctly parsing cluster.conf for gfs/gfs2 fs.
* Fri Dec 02 2011 Shane Bradley <sbradley@redhat.com>- 2.06-15
- Removed python-pycurl dependencey and now error will be printed if that library is required.
- Added another way to detect bonding and added more info to networkmap object for proc data.
- Fixed parsing error in device mapper parser.
- Added ability to remove newline in installedrpms file when running checksysreport so it will not error out.
- Fixed error where no nodeid would error out, now will try to magically guess the id.